--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "use-debounce": "^8.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
