--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "camelcase-keys": "^7.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-number-format": "^4.9.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "use-debounce": "^8.0.1",
