--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/moment": "^2.14.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -19,7 +18,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
     "camelcase-keys": "^7.0.2",
-    "moment": "^2.29.3",
+    "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-number-format": "^4.9.3",
