--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "axios": "^0.27.2",
     "camelcase-keys": "^7.0.2",
     "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-number-format": "^4.9.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "use-debounce": "^8.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.17.12",
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
     "@typescript-eslint/parser": "^5.24.0",
     "eslint": "^8.15.0",
